Score board implementation was refactored. Test case was created as IT.